yet more bibliography; some minor edits

--- a/biblio.bib
+++ b/biblio.bib
@@ -44,6 +44,39 @@
 	Year = {2005}
 }
 
+@Article{Naamani-Dery2015,
+author="Naamani-Dery, Lihi
+and Golan, Inon
+and Kalech, Meir
+and Rokach, Lior",
+title="Preference Elicitation for Group Decisions Using the {B}orda Voting Rule",
+journal="Group Decision and Negotiation",
+year="2015",
+month="Nov",
+day="01",
+volume="24",
+number="6",
+pages="1015--1033"
+}
+
+@article{Salo2001,
+	Author = {A. Salo and R. P. H{\"a}m{\"a}l{\"a}inen},
+	Journal = {IEEE Trans. on Systems, Man and Cybernetics},
+	Number = 6,
+	Pages = {533--545},
+	Title = {Preference Ratios in Multiattribute Evaluation {(PRIME)}--Elicitation and Decision Procedures under Incomplete Information},
+	Volume = 31,
+	Year = 2001
+}
+	
+@book{Kouvelis1997,
+	address = "Dordrecht",
+	author = "Kouvelis, P. and Yu, G.",
+	publisher = "Kluwer",
+	title = "{Robust Discrete Optimization and Its Applications}",
+	year = "1997"
+}
+
 @article{Llamazares2013,
 	author    = {Bonifacio Llamazares and
 	Teresa Pe{\~{n}}a},
@@ -80,6 +113,14 @@
 	number    = {3},
 	pages     = {475--502},
 	year      = {2009}
+}
+
+@book{Savage1954,
+	address = "New York",
+	author = "Savage, L. J.",
+	publisher = "Wiley",
+	title = "{The Foundations of Statistics}",
+	year = "1954"
 }
 
 @article{Stein1994,
