--- a/draft.tex
+++ b/draft.tex
@@ -94,46 +94,38 @@ and develop several query strategies that interleave questions to the chair and 
 %General motivation: need to deal with partially specified preferences and as well partially specified voting rules
 Aggregation of preference information is a central task in many computer systems (recommender systems, search engines, etc).
 In many situations, such as in group recommender systems, the goal is to find a consensus choice.
-It is natural to look at methods from social choice and see how they can be adapted for group decision-making in a computerized setting.
+It is therefore natural to look at methods from social choice and see how they can be adapted for group decision-making in a computerized setting.
 
 The traditional approach to social choice assumes that both the social function and the full preference orderings of the voters are expressed beforehand. 
 As noted by several authors requiring voters to express full preference orderings can be prohibitively costly (in term of cognitive and communication cost), especially for  large sets of alternatives.
-This observation has motivated a number of recent works \cite{Xia2008,Kalech2011,Lu2011,Naamani-Dery2015} on preference elicitation in a voting context. % including several works on social choice with partial profiles.
+This observation has motivated a number of recent works \cite{Xia2008,Kalech2011,Lu2011,Naamani-Dery2015} have considered social choice with partially specified preferences and incremental elicitation of voters preferences. % including several works on social choice with partial profiles.
 
 %Recently, the assumption of full a has been questioned by a number of researchers
 %In many real situations, however, it may be necessary to reason with partial preferences, as some preferences are not available and too expensive to obtain (with respect to a cognitive or economic cost). 
-
-In a similar way,  Cailloux and Endriss \cite{Cailloux2014} have argued that it might not always be realistic to assume that a voting rule is known precisely.
+On the other hand, in several situations it may not be easy to precisely define the voting rule.
+In particular, when considering positional scoring rules, it is possible to derive dominance relations (akin to stochastic dominance) that allow to eliminate some alternatives since they will be less preferred than another one for any instantiation of the weights \cite{Stein1994}.Among others, Llamazares and Pe{\~{n}}a \cite{Llamazares2013} have considered  the problem of dealing with underspecified weights in positional scoring rules.
+Cailloux and Endriss \cite{Cailloux2014} have proposed elicitation methods for based on partial orders.
 Indeed, it is possible that the chair may have some preferences over the desired aggregation method, but may still be not able to formalize the voting rule upfront.
+%argued that it might not always be realistic to assume that a voting rule is known precisely.
 
 %We argue that it is possible that the committee wants to precise some preferences about the aggregations.
-In this paper we depart from the classic view by considering that both preferences and the social choice rule can be only partially specified.
+In this paper we consider that both preferences and the social choice rule can be only partially specified.
 We develop methods for computing the minimax-optimal alternative for scoring rules with partial preference information and partial information about the weights.
+While previous works have considered either partial preferences or a partially specified aggregation, but we do not know of any work considering both sources of uncertainty at the same time.
 
-%
 % Incremental elicitation of preferences is critical to easing the cognitive and communication cost for users 
 %In this paper we provide a method for approximate winner determination and an incremental elicitation protocol based on minimax regret. 
 %In this paper we relax the traditional assumptions.
-
-
-
 %Incremental elicitation of preferences can help mitigating the cognitive and communication costs
-%We adopt an adaptive utility elicitation framrwork
 
-%Focus on positional scoring rules
 We focus on positional scoring rules, that  are a particularly common methods used to aggregate rankings and determine  a winner.
 We also address the problem of elicitation, providing incremental elicitation methods to acquire relevant preference information.%The score can be seen as a utility for the society.
 %and often captures more information than is needed to determine the winner
 We discuss  heuristics that allow us to determine queries that quickly allow to reduce minimax regret.
 
-
-Possible and necessary winner determination: in typical settings, there will be no necessary winner and too many possible winners.
-
-
-While previous works have considered either partial preferences or a partially specified aggregation, but we do not know of any work considering both sources of uncertainty at the same time.
+% the value of certain preference information is often not worth the cost of obtaining it.
 
 %We consider that the committee wants to express preferences for some voting rules
-
 We develop several query strategies that  focus simultaneously on reduction of relevant preference and voting rule uncertainty.
 % We must engage in simultaneous elictation of the rule and of the preferences.
 
@@ -155,23 +147,24 @@ In Section \ref{sec:elicit} we provide an interactive elicitation protocol based
 Also this reference: \cite{Naamani-Dery2015}.
 \end{itemize}
 
+Possible and necessary winner determination: in typical settings, there will be no necessary winner and too many possible winners.
+
 %\subsection{Related works}
 \paragraph{Uncertain scoring rules}
 A number of works have dealt with the problem of reasoning with incompletely specified aggregation functions.
-In particular, when considering positional scoring rules, it is possible to derive dominance relations (akin to stochastic dominance) that allow to eliminate some alternatives since they will be less preferred than another one for any instantiation of the weights \cite{Stein1994}.
+%In particular, when considering positional scoring rules, it is possible to derive dominance relations (akin to stochastic dominance) that allow to eliminate some alternatives since they will be less preferred than another one for any instantiation of the weights \cite{Stein1994}.
 More recently the characterization of methods for aggregating the uncertainty over the scoring vectors has been studied in \cite{Viappiani2018}.
-We also note that the elicitation methods based on minimax regret described in \cite{Boutilier2006} (and in many other recent papers), while not specifically targeted to scoring rules, can be easily adapted (from a technical point of view) to elicit the scoring vector from a committee.
 
-\paragraph{Incomplete profiles}
+%We also note that the elicitation methods based on minimax regret described in \cite{Boutilier2006} (and in many other recent papers), while not specifically targeted to scoring rules, can be easily adapted (from a technical point of view) to elicit the scoring vector from a committee.
+
+%\paragraph{Incomplete profiles}
 %In this setting, the system knows a partial preference profile $\ppref$ 
 %The partial preference relation $\ppref_i$ represents our knowledge about the preferences of agent $i$.
 
-Lu and Boutilier \cite{Lu2011} assume that the preferences of the voters are only partially known (while the social choice function is known and fixed in advance; it is assumed to be decomposable) and 
- propose to use minimax regret to produce a robust approximation.
-Each alternative is associated with a max regret value that measures how far from optimal it could be in the worst case given any completion of the partial profile.
-The computation of max regret is facilitated by the fact the score is decomposable.
-
-
+%Lu and Boutilier \cite{Lu2011} assume that the preferences of the voters are only partially known (while the social choice function is known and fixed in advance; it is assumed to be decomposable) and 
+% propose to use minimax regret to produce a robust approximation.
+%Each alternative is associated with a max regret value that measures how far from optimal it could be in the worst case given any completion of the partial profile.
+%The computation of max regret is facilitated by the fact the score is decomposable.
 
 \section{Background}\label{sec:background}
 
@@ -212,7 +205,8 @@ We let $C(\textbf{p})=C(\ppref_1)\times \ldots \times C(\ppref_n)$ be the set of
 
 \medskip
 We also assume that the weights of the scoring rule are only partially specified.
-Without loss of generality, we assume $w_1=1$ and $w_m=0$.
+We consider a monotonic non-increasing sequence of weights: $w_{1} \geq w_{2} \geq \ldots \geq w_{m}$. Without loss of generality, we assume $w_1=1$ and $w_m=0$
+%Without loss of generality, we assume $w_1=1$ and $w_m=0$.
 The preferences of the chair are encoded with linear constraints, for instance one may state
 that $w_2>0.5$.
 We assume the weight sequence to be convex, that means that the difference between the weight of the first position and the weight of the second position is at least as much as the difference between the weights of the second and third positions, etc. 
@@ -239,14 +233,8 @@ We use $\mathcal{W}$ to denote the set of convex weight vectors.
 \section[Minimax regret under partial profile and weight information]{Minimax regret under partial profile and weight information}
 \label{sec:mmr}
 
-%Robust decision criterion: minimax regret
-Minimax regret \cite{Savage1954} is a decision criterion that has been used for robust optimization under data uncertainty \cite{Kouvelis1997} and as well in decision-making with uncertain utility values  \cite{Salo2001,Boutilier2006}.
-
-% we use max regret to measure the quality
-
 % This leads to interesting tradeoffs in elicitation
 %The regret-minimizing alternative may not be a possible winner for some voting rules.
-% the value of certain preference information is often not worth the cost of obtaining it.
 The weights of a scoring rule can model different preferences of the committee. 
 For instance, the weights can control the inclination to favour ``extreme'' alternatives (often at either the top or the bottom of the rankings) at the expenses of ``moderate'' alternatives (that are more consistently in the middle part of the rankings).
 However in general it can be difficult to set the weights in an appropriate way.
@@ -254,16 +242,16 @@ However in general it can be difficult to set the weights in an appropriate way.
 In this paper, we consider a setting where both the voters' preferences and the preferences of the chair about the voting rule are incomplete.
 
 
-\medskip
-The quality of an alternative can be quantified by considering the maximum regret with respect to an adversary that can choose the instantiation of both a complete profile (extending the known preferences of the agents) and of the scoring vectors (associated to the preferences of the committee).
+%\medskip
+%The quality of an alternative can be quantified by considering the maximum regret with respect to an adversary that can choose the instantiation of both a complete profile (extending the known preferences of the agents) and of the scoring vectors (associated to the preferences of the committee).
 
 We propose to use the minimax regret as a decision criterion to determine a winner.
+Minimax regret \cite{Savage1954} is a decision criterion that has been used for robust optimization under data uncertainty \cite{Kouvelis1997} and as well in decision-making with uncertain utility values  \cite{Salo2001,Boutilier2006}.
 Minimax regret \cite{Boutilier2006} has been used for making decisions under utility uncertainty and for preference elicitation.
-%Lu and Boutilier \cite{Lu2011} have adopted minimax regret. 
+Lu and Boutilier \cite{Lu2011} have adopted minimax regret for winner determination in social choice with
+the preferences of the voters that are only partially known (while the social choice function is known and fixed in advance; it is assumed to be decomposable).
 
 This paper extends the work of  to the simultaneous presence of uncertainty in the agents' preferences and uncertainty in the weights.
-
-
 Intuitively, the quality of a proposed alternative $a$ is how far from optimal $a$  could be in the worst case, given the current knowledge about the voting rule and about the voters' preferences.
 
 The maximum regret is considered by assuming an adversary can choose both 1) to extend the partial profile into a complete profile 2) can instantiate the weights choosing among any feasible weight vector in $W \subseteq \mathcal{W}$.
@@ -359,8 +347,6 @@ The linear program is then the following:
 
 \begin{itemize}	
 	\item (will probably go to a later section, or to the appendix)
-	\item Mixed integer program to solve minimax regret without the convexity
- 	\item Approximations ?
 \end{itemize}
 
 Let $\hat{v}_i$ be the linear order extending $p_i$ according to the above procedure (described in \cite{Lu2011}).
@@ -422,10 +408,8 @@ We propose an regret-based incremental elicitation method...
 \paragraph{Query types}
 We distinguish between queries asked to the voters and questions asked to the chair.
 
-Questions to the voters: it is natural to consider comparison queries asking to compare two alternatives
-
+Questions to the voters: it is natural to consider comparison queries asking to compare two alternatives.
 Another common type or queries are {\em top-k}, asking to each voter his $k$ most alternatives.
-
 
 Questions to the committee: we consider questions that refine our knowledge about the weighting vectors $w$.
 
@@ -450,11 +434,7 @@ In the experiments we want to compare the interleaved approach with a baseline c
 %Type of questions that we can ask to the chair:	bound queries (Is this alternative among your top-k most preferred items?), comparison queries (do you prefer alternative x or alternative y?).
 
 % we discuss the different forms of queries and develop several query strategies 
-
-
-
-
-\paragraph{Query methods}
+%\paragraph{Query methods}
 We consider different strategies to determine the next question to ask given the current information.
 %{\em Some ideas: decompose the regret into two components, one due to $\w$ and one due to $\pprofile$, and ask a question to the chair / or to one of the agents depending on which is highest}
 
@@ -494,20 +474,20 @@ Then use minimax regret as in Lu and Boutilier.
 
 % We can stop elicitation when minimax regret is sufficiently small.
 We test the elicitation protocols in randomly generated datasets and real datasets. % (sushi and iris).
+
 We evaluate the proposed method using the following simulated protocol.
+First of all, we randomly generate the true preferences of the users (i.e. the linear orders) and the weights associated with the committee's scoring rule.
+For each of the elicitation strategy, we simulate an elicitation session.
+We compare the performance  of the different strategies of Section \ref{sec:elicit} with respect to decrement in max regret and with respect to the real loss.
 
-\begin{itemize}
- \item Randomly generate the true preferences of the users (i.e. the linear orders) and the weights associated with the committee's preferences on the scoring rule
- \item For each of the elicitation strategy, simulate the elicitation by asking the queries selected by the strategy.
- 
- \item Compare performance with respect to decrement in max regret, real loss
-\end{itemize}
+%For each of the elicitation strategy, we simulate the elicitation by asking the queries selected by the strategy.
+ %\item 
+%\%end{itemize}
+We performed tests with different values of $m$ (number of alternatives) and $n$ (number of agents); test with different population sizes, different number of alternatives, etc.
 
-Test with different values of $m$ (number of alternatives) and $n$ (number of agents); test with different population sizes, different number of alternatives, etc.
+We experimented with both settings that assume a convex sequences of weights, and others without this assumption.
 
-Make one test assuming convex sequences of weights, and others without this assumption.
-
-Comparison between our interleaved strategy and a strategy, still based on minimax regret  but that is not interleaved; also compare to some heuristic baselines.
+%Comparison between our interleaved strategy and a strategy, still based on minimax regret  but that is not interleaved; also compare to some heuristic baselines.
 
 \section{Conclusions}  \label{sec:conclusions}
 %  We have proposed the use of minimax regret as a means of robust winner determination to support the informational approximation of voting rules, as well as to guide the process of incremental elicitation of voter preferences.
